--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pandas==1.5.3
-pandasai>=2.0.36
-python-dotenv==1.0.0
-streamlit>=1.20.0
+pandas == 1.5.3
+pandasai ==2.0.36
+python-dotenv ==1.0.0
+streamlit >= 1.20.0
