--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ pyyaml
 google-generativeai == 0.5.2
 pyttsx3 == 2.90
 SpeechRecognition == 3.10.3
-PyAudio == 0.2.14
+streamlit==1.34.0
+PyAudio==0.2.14
+
